--- a/raw_data/alternative_outcomes_plots.Rmd
+++ b/raw_data/alternative_outcomes_plots.Rmd
@@ -30,7 +30,7 @@ load("merged_ppcs.RData")
 ```{r}
 fryers_prop <- c(0.16, 0.10, 0.13, NA)
 
-merged_ppcs %>% 
+merged_guilty <- merged_ppcs %>% 
   group_by(civilian_race, civilian_guilty_of_illegal) %>%
   summarize(count_of_guilty_civilian= n()) %>%
   mutate(prop = count_of_guilty_civilian / sum(count_of_guilty_civilian)) %>% 
@@ -42,10 +42,12 @@ merged_ppcs %>%
   labs(x = "Civilian Race", y = "Proportion") +
   geom_point(aes(x = civilian_race, y = fry_prop), shape = "X", size = 3.5, color = "red") +
    geom_pointrange(aes(ymin = prop - se, ymax = prop + se)) +
-  ggtitle("Proportions of Civilians Guilty of Carrying Illegal Items by Race") +
-  scale_y_log10()
-  
+  ggtitle("Proportions of Civilians Guilty\nof Carrying Illegal Items by Race") +
+  scale_y_log10() 
 
+merged_guilty
+
+ggsave("ppcs_civilian_guilty_of_carrying_illegal_items.png", plot = merged_guilty, width=3.5, height =4 )
 
   
 ```
